[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/d_daok_entes_strip15.png" type="Texture" id=1]
[ext_resource path="res://scripts/Tortuga.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CircleShape2D" id=5]
radius = 200.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Imagen/PieL:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Imagen/PieR:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Imagen/Cuerpo:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Imagen/PieL:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Imagen/PieR:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Imagen/Cuerpo:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -4 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "walk"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Imagen/PieL:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -4 ), Vector2( 0, 0 ), Vector2( 0, -4 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Imagen/PieR:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ), Vector2( 0, 0 ), Vector2( 0, -4 ), Vector2( 0, 0 ), Vector2( 0, -4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Imagen/Cuerpo:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -4 ), Vector2( 0, 0 ) ]
}

[node name="Tortuga" type="Node2D" groups=["movil", "tortuga"]]
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Movil" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 3
input_pickable = false
__meta__ = {
"_edit_lock_": true
}

[node name="Coli" type="CollisionShape2D" parent="Movil"]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Hulle" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
input_pickable = false
monitorable = false
__meta__ = {
"_edit_lock_": true
}

[node name="Coli" type="CollisionShape2D" parent="Hulle"]
shape = SubResource( 5 )

[node name="Imagen" type="Node2D" parent="." groups=["imagen"]]
__meta__ = {
"_edit_lock_": true
}

[node name="PieL" type="Sprite" parent="Imagen"]
texture = ExtResource( 1 )
centered = false
offset = Vector2( -58, -98 )
hframes = 15
frame = 13
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="PieR" type="Sprite" parent="Imagen"]
texture = ExtResource( 1 )
centered = false
offset = Vector2( -58, -98 )
hframes = 15
frame = 12
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Cuerpo" type="Sprite" parent="Imagen"]
texture = ExtResource( 1 )
centered = false
offset = Vector2( -58, -98 )
hframes = 15
frame = 11
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Anima" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/walk = SubResource( 4 )

[node name="Ray" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 0 )
collision_mask = 8
collide_with_areas = true
collide_with_bodies = false

[node name="Errar" type="Timer" parent="."]
one_shot = true

[node name="Observador" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="Movil" to="." method="_on_Movil_area_entered"]
[connection signal="area_exited" from="Movil" to="." method="_on_Movil_area_exited"]
[connection signal="area_entered" from="Hulle" to="." method="_on_Hulle_area_entered"]
[connection signal="area_exited" from="Hulle" to="." method="_on_Hulle_area_exited"]
[connection signal="timeout" from="Errar" to="." method="_on_Errar_timeout"]
[connection signal="timeout" from="Observador" to="." method="_on_Observador_timeout"]
